--- a/ERPAnimalia/Views/Shared/_Layout.cshtml
+++ b/ERPAnimalia/Views/Shared/_Layout.cshtml
@@ -27,7 +27,8 @@
                     <ul class="dropdown-menu">
                         <li>@Html.ActionLink("Producto","Index","Product")</li>
                         <li>@Html.ActionLink("Cliente","Index", "Cliente")</li>
-                        <li><a href="#">Factura</a></li>
+                        <li>@Html.ActionLink("Factura", "CrearFactura", "Factura")</li>
+
                     </ul>
                 </li>
                 <li>
