--- a/ERPAnimalia/Views/Voucher/Voucher.cshtml
+++ b/ERPAnimalia/Views/Voucher/Voucher.cshtml
@@ -1,5 +1,13 @@
-﻿@{
-  
-    Html.RenderPartial("HeadVoucher");
+﻿<!DOCTYPE html>
+<html>
+<head>
 
-}
+</head>
+        <body>
+            @{
+
+                Html.RenderPartial("HeadVoucher");
+
+            }
+        </body>
+</html>
