--- a/ERPAnimalia/Views/Shared/HeadVoucher.cshtml
+++ b/ERPAnimalia/Views/Shared/HeadVoucher.cshtml
@@ -1,11 +1,7 @@
 ﻿@using ERPAnimalia.Models;
 
-@{
-    Layout = null;
-    
-}
-
 <!DOCTYPE html>
+
 @model ERPAnimalia.Models.VoucherHeadModel
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
 <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
@@ -53,32 +49,29 @@
     });
 
     
-
-
-
-
                
 </script>
-<div class="container-fluid">
+    <div class="container-fluid">
 
     <div class="panel panel-primary">
-        <div class="panel-heading">Buscar Productos</div>
+        <div class="panel-heading">Crear Factura</div>
         <div class="panel-body">
-
             <form action="HeadVoucher" class="form-inline">
-                <div class="form-group">
-                    <label for="DateVoucher">Fecha Comprobante</label></br>
-                    <input size="50" type="text" class="datepicker" data-date-format="mm/dd/yyyy" id="DateVoucher" placeholder="Ingrese Fecha">
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-3">Cliente:</label>
-                    <div>
-                       @Html.EditorFor(model => model.clientModel.First().NombreCompleto, new { @id="client", htmlAttributes = new { @class = "form-control" } })  
+                <div class="row">
+                    <div class="col-md-4">
+
+                        <label class="control-label col-md-3">Cliente:</label>
+                        <div>
+                            @Html.EditorFor(model => model.clientModel.First().NombreCompleto, new { htmlAttributes = new { @class = "form-control" } })
+                        </div>
 
 
                     </div>
-                </div>
-
+                    <div class="col-md-4 col-md-offset-4">
+                        <label for="DateVoucher">Fecha Comprobante</label></br>
+                        <input size="50" type="text" class="datepicker" data-date-format="mm/dd/yyyy" id="DateVoucher" placeholder="Ingrese Fecha">
+                    </div>
+                </div>  
             </form>
         </div>
 
