--- a/ERPAnimalia/Content/Site.css
+++ b/ERPAnimalia/Content/Site.css
@@ -43,6 +43,10 @@ input.valid{
 .panel-primary {
     width: 2000px;
 }
+
+.panel-primary-factura {
+    width: 950px;
+}
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
