--- a/ERPAnimalia/Views/Shared/HeadVoucher.cshtml
+++ b/ERPAnimalia/Views/Shared/HeadVoucher.cshtml
@@ -12,7 +12,7 @@
 <script type="text/javascript">
     $(document).ready(function () {
 
-        debugger;
+       
         $("#NombreCompleto").autocomplete({
          
             source: function (request, response) {
@@ -31,7 +31,7 @@
             },
             messages: { noResults: "", results: "" }
         });
-                debugger;
+              
                 $('#DateVoucher').datepicker({
                     dateFormat: "dd-mm-yy",
                     firstDay: 1,
@@ -51,9 +51,8 @@
     
                
 </script>
-    <div class="container-fluid">
-
-    <div class="panel panel-primary">
+   
+    <div class="panel panel-primary-factura">
         <div class="panel-heading">Crear Factura</div>
         <div class="panel-body">
             <form action="HeadVoucher" class="form-inline">
@@ -64,16 +63,16 @@
                         <div>
                             @Html.EditorFor(model => model.clientModel.First().NombreCompleto, new { htmlAttributes = new { @class = "form-control" } })
                         </div>
-
-
                     </div>
-                    <div class="col-md-4 col-md-offset-4">
-                        <label for="DateVoucher">Fecha Comprobante</label></br>
-                        <input size="50" type="text" class="datepicker" data-date-format="mm/dd/yyyy" id="DateVoucher" placeholder="Ingrese Fecha">
+                    <div class="col-md-4 col-md-offset-3">
+                        <label class="control-label col-md-4" for="DateVoucher">Fecha</label>
+                        <div>
+                         <input type="text" class="datepicker" data-date-format="mm/dd/yyyy" id="DateVoucher" placeholder="Ingrese Fecha">
+                        </div>
                     </div>
                 </div>  
             </form>
         </div>
 
     </div>
-</div>
+
