--- a/ERPAnimalia/Content/Site.css
+++ b/ERPAnimalia/Content/Site.css
@@ -61,6 +61,14 @@ textarea {
     max-width: 280px;
 }
 
+.nav-tabs{
+ 
+background-color:green;
+ 
+}
+ 
+ 
+
 #grid{
     background-color:#808080;
 }
