--- a/ERPAnimalia/Views/Shared/HeadVoucher.cshtml
+++ b/ERPAnimalia/Views/Shared/HeadVoucher.cshtml
@@ -1,23 +1,21 @@
 ﻿@using ERPAnimalia.Models;
 
 <!DOCTYPE html>
+<head>
+    @model ERPAnimalia.Models.VoucherHeadModel
+    <link href="~/Content/css/Voucher.css" rel="stylesheet" />
+</head>
 
-@model ERPAnimalia.Models.VoucherHeadModel
-<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js"></script>
-<script src="http://stevenlevithan.com/assets/misc/date.format.js"></script>
 
-<script type="text/javascript">
+    <script type="text/javascript">
     $(document).ready(function () {
 
-       
+
         $("#NombreCompleto").autocomplete({
-         
+
             source: function (request, response) {
                 $.ajax({
-                   
+
                     url: "/Voucher/GetClient",
                     type: "POST", dataType: "json",
                     data: { term: request.term },
@@ -31,7 +29,7 @@
             },
             messages: { noResults: "", results: "" }
         });
-              
+
                 $('#DateVoucher').datepicker({
                     dateFormat: "dd-mm-yy",
                     firstDay: 1,
@@ -44,14 +42,14 @@
                         ["Ene", "Feb", "Mar", "Abr", "May", "Jun",
                         "Jul", "Ago", "Sep", "Oct", "Nov", "Dic"]
                 });
-               
-                  
+
+
     });
 
-    
-               
-</script>
-   
+
+
+    </script>
+
     <div class="panel panel-primary-factura">
         <div class="panel-heading">Crear Factura</div>
         <div class="panel-body">
@@ -67,10 +65,10 @@
                     <div class="col-md-4 col-md-offset-3">
                         <label class="control-label col-md-4" for="DateVoucher">Fecha</label>
                         <div>
-                         <input type="text" class="datepicker" data-date-format="mm/dd/yyyy" id="DateVoucher" placeholder="Ingrese Fecha">
+                            <input type="text" class="datepicker" data-date-format="mm/dd/yyyy" id="DateVoucher" placeholder="Ingrese Fecha">
                         </div>
                     </div>
-                </div>  
+                </div>
             </form>
         </div>
 
