--- a/ERPAnimalia/Views/Voucher/Voucher.cshtml
+++ b/ERPAnimalia/Views/Voucher/Voucher.cshtml
@@ -3,39 +3,86 @@
 <!DOCTYPE html>
 
 @model ERPAnimalia.Models.VoucherDetailModel
+@{string n = string.Empty;  }
 <html>
+<head>
 
-
-    <head>
-        
-        <meta name="viewport" content="width=device-width" />
-        <title>Factura</title>
-
-    </head>
+    <script src="http://code.gijgo.com/1.3.1/js/gijgo.js" type="text/javascript"></script>
+    <meta name="viewport" content="width=device-width" />
+    <title>Factura</title>
+</head>
 <body>
     <table id="grid"></table>
     <script type="text/javascript">
+        var dataSurce;
+        var id;
+       
 
+       
         $(document).ready(function () {
 
             $("#Descripcion1").autocomplete({
-
                 source: function (request, response) {
-                    debugger;
+
                     $.ajax({
                         url: "/Voucher/GetProduct",
                         type: "POST", dataType: "json",
                         data: { term: request.term },
                         success: function (data) {
+
                             response($.map(data, function (item) {
-                                debugger;
                                 return { label: item.Descripcion1, value: item.Descripcion1 };
                             }));
                         }
                     });
                 },
                 messages: { noResults: "", results: "" }
-            });                           
+            });
+
+            var gridDetail = $("#gridDetail").grid({
+                dataSource: "/Voucher/GetProductDetail",
+                dataKey: "IdProduct",
+                uiLibrary: "bootstrap",
+                columns: [
+                     { field: "IdProduct", hidden: true },
+                    { field: "Codigo", title: "Código", sortable: true, width: 20 },
+                    { field: "Descripcion1", title: "Descripcion1", sortable: true, width: 80 },
+                    { field: "PrecioVenta", title: "Precio Venta", sortable: true, width: 20 },
+                    { field: "Cantidad", title: "Cantidad", editor: true, width: 20 },
+                    { field: "Descuento", title: "Descuento", editor: true, width: 20 },
+                    { field: "Subtotal", Subtotal: "Subtutol", sortable: true, width: 20 }
+
+                ],
+                optimisticPersistence: { sessionStorage: ["page", "limit"] },
+                pager: { enable: true, limit: 5, sizes: [2, 5, 10, 20] }
+            });
+
+            gridDetail.on('cellDataChanged', function (e, $cell, column, record, oldValue, newValue) {
+                debugger;
+                
+                CalculateRow(record);
+            });
+
+            function CalculateRow(record) {
+                $.ajax({
+                    url: "/Voucher/GetSubtotal",
+                    type: "GET", dataType: "json",
+                    data: { idProduct: record.IdProduct, cantidad: record.Cantidad, descuento: record.Descuento },
+                    success: function (data) {
+                        gridDetail.reload();
+
+                    }
+
+                });
+
+            }
+
+            $('#Descripcion1').blur(function () {
+                debugger;
+                
+                gridDetail.reload({ term: $("#Descripcion1").val(), cantidad: $("#Cantidad").val(), descuento: $("#Descuento").val() });
+
+            });
         });
 
     </script>
@@ -43,87 +90,51 @@
         @{
             Html.RenderPartial("HeadVoucher");
         }
-                <!-- Nav tabs -->
-                <div role="tabpanel">
-                    <ul class="nav nav-tabs" role="tablist">
-                        <li role="presentation" class="active">
-                            <a href="#productTab" aria-controls="productoTab" role="tab" data-toggle="tab">Product</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#informationTab" aria-controls="informationTab" role="tab" data-toggle="tab">Informacion</a>
-                        </li>
-                    </ul>
-                    <div class="tab-content">
-                        <div role="tabpanel" class="tab-pane active" id="productTab">
-                            <h4>Datos</h4>
-                            <form class="form-horizontal">
+        <!-- Nav tabs -->
+        <div role="tabpanel">
+            <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active">
+                    <a href="#productTab" aria-controls="productoTab" role="tab" data-toggle="tab">Product</a>
+                </li>
+                <li role="presentation">
+                    <a href="#informationTab" aria-controls="informationTab" role="tab" data-toggle="tab">Informacion</a>
+                </li>
+            </ul>
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="productTab">
+                    <h4>Datos</h4>
+                    <form class="form-horizontal">
 
-                                <div class="row">
-                                    <div class="col-md-5">
-                                        <label class="control-label col-md-2">Producto:</label>
-                                        @Html.EditorFor(model => model.ProductModel.First().Descripcion1, new { htmlAttributes = new { @class = "form-control col-md-offset-3" } })
-                                    </div>
-                                </div>
-                            </form>
-                            </br>
-                            </br>
-                            <form class="form-group">
-                                
-                                <div class="row">
-                                    <div class="col-md-2">
-                                        <label class="control-label col-md-2">Producto:</label>
-                                        @Html.EditorFor(model => model.ProductModel.First().Descripcion1, new { htmlAttributes = new { @class = "form-control" } })
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label class="control-label col-md-2">Cantidad:</label>
-                                        @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "form-control" } })
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label class="control-label col-md-2">Precio:</label>
-                                        @Html.EditorFor(model => model.ProductModel.First().ListaPrecio.First().PrecioVenta, new { htmlAttributes = new { @class = "form-control" } })
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label class="control-label col-md-2">Descuento:</label>
-                                        @Html.EditorFor(model => model.Subtotal, new { htmlAttributes = new { @class = "form-control " } })
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label class="control-label col-md-2">Impuesto:</label>
-                                        @Html.EditorFor(model => model.Subtotal, new { htmlAttributes = new { @class = "form-control " } })
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label class="control-label col-md-2">Subtotal:</label>
-                                        @Html.EditorFor(model => model.Subtotal, new { htmlAttributes = new { @class = "form-control" } })
-                                    </div>
-                                </div>
-</form>
-                                @*<div class="col-md-2">
-                <div class="col-md-4">
-                    <button type="button" id="btnAdd" class="btn btn-default pull-right">Agregar Cliente</button>
+                        <div class="row">
+                            <div class="col-md-5">
+                                <label class="control-label col-md-2">Producto:</label>
+                                @Html.EditorFor(model => model.ProductModel.First().Descripcion1, new { htmlAttributes = new { @class = "form-control col-md-offset-3" } })
+                            </div>
+                        </div>
+                        </br>
+                        </br>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <table id="gridDetail" ></table>
+                                @Html.Label("Total=") <input id="total" />
+                            </div>
+                           
+                            
+
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="informationTab">
+
+                        </div>
+                    </form>
                 </div>
-                <table id="gridVoucher"></table>
-            </div>*@
 
-
-
-
-                                <div class="col-md-5">
-                                    <label class="control-label col-md-1">Cantidad:</label>
-                                    <div class="col-md-3">
-                                        @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "form-control col-md-offset-7" } })
-                                    </div>
-                                </div>
-                                <div role="tabpanel" class="tab-pane" id="informationTab">
-
-                                </div>
-</div>
-
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" id="btnSave" class="btn btn-primary">Save</button>
-                    </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" id="btnSave" class="btn btn-primary">Save</button>
                 </div>
             </div>
-            
-    
+        </div>
+    </div>
+
 </body>
 </html>
