--- a/ERPAnimalia/Views/Voucher/Voucher.cshtml
+++ b/ERPAnimalia/Views/Voucher/Voucher.cshtml
@@ -3,7 +3,6 @@
 <!DOCTYPE html>
 
 @model ERPAnimalia.Models.VoucherDetailModel
-@{string n = string.Empty;  }
 <html>
 <head>
 
@@ -14,24 +13,20 @@
 <body>
     <table id="grid"></table>
     <script type="text/javascript">
-        var dataSurce;
         var id;
-       
-
-       
+        var gridDetail;
         $(document).ready(function () {
-
+           
             $("#Descripcion1").autocomplete({
                 source: function (request, response) {
-
                     $.ajax({
                         url: "/Voucher/GetProduct",
                         type: "POST", dataType: "json",
                         data: { term: request.term },
                         success: function (data) {
-
                             response($.map(data, function (item) {
                                 return { label: item.Descripcion1, value: item.Descripcion1 };
+                                GetTotal();
                             }));
                         }
                     });
@@ -39,7 +34,7 @@
                 messages: { noResults: "", results: "" }
             });
 
-            var gridDetail = $("#gridDetail").grid({
+             gridDetail = $("#gridDetail").grid({
                 dataSource: "/Voucher/GetProductDetail",
                 dataKey: "IdProduct",
                 uiLibrary: "bootstrap",
@@ -50,41 +45,68 @@
                     { field: "PrecioVenta", title: "Precio Venta", sortable: true, width: 20 },
                     { field: "Cantidad", title: "Cantidad", editor: true, width: 20 },
                     { field: "Descuento", title: "Descuento", editor: true, width: 20 },
-                    { field: "Subtotal", Subtotal: "Subtutol", sortable: true, width: 20 }
-
+                    { field: "Subtotal", title: "Subtotal", sortable: true, width: 20 },
+                    { width: 60, align: 'center', tmpl: '<u class="gj-cursor-pointer">Delete</u>', events: { 'click': Delete } }
                 ],
                 optimisticPersistence: { sessionStorage: ["page", "limit"] },
                 pager: { enable: true, limit: 5, sizes: [2, 5, 10, 20] }
-            });
+             });
 
-            gridDetail.on('cellDataChanged', function (e, $cell, column, record, oldValue, newValue) {
-                debugger;
-                
+      
+            gridDetail.on('cellDataChanged', function (e, $cell, column, record, oldValue, newValue) {                
                 CalculateRow(record);
+                
             });
 
             function CalculateRow(record) {
+                debugger;
+               
                 $.ajax({
                     url: "/Voucher/GetSubtotal",
                     type: "GET", dataType: "json",
                     data: { idProduct: record.IdProduct, cantidad: record.Cantidad, descuento: record.Descuento },
                     success: function (data) {
                         gridDetail.reload();
-
+                        GetTotal();
                     }
-
                 });
+            }
+            
 
+            $('#Descripcion1').blur(function () {     
+                gridDetail.reload({ term: $("#Descripcion1").val(), cantidad: $("#Cantidad").val(), descuento: $("#Descuento").val() });
+                GetTotal();
+            });
+
+            function GetTotal()
+            {
+                debugger;
+                if (gridDetail.count != 0) {
+                    var totalRows = gridDetail.count();
+                    var row = gridDetail.get(totalRows);
+                    $("#totalVoucher").val(row.Total);
+                }
             }
 
-            $('#Descripcion1').blur(function () {
-                debugger;
-                
-                gridDetail.reload({ term: $("#Descripcion1").val(), cantidad: $("#Cantidad").val(), descuento: $("#Descuento").val() });
-
-            });
+          
         });
 
+        function Delete(e) {
+            if (confirm('Are you sure?')) {
+                grid.removeRow(e.data.id);
+            }
+        }
+
+        $.ajax({ url: "Save", type: "POST"})
+                   .done(function () {
+                       grid.reload();
+                     
+                   })
+                   .fail(function () {
+                       alert("Unable to save.");
+                       
+                   });
+        }
     </script>
     <div class="container-fluid">
         @{
@@ -116,11 +138,8 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <table id="gridDetail" ></table>
-                                @Html.Label("Total=") <input id="total" />
+                                @Html.Label("Total=") @Html.TextBox("totalVoucher")
                             </div>
-                           
-                            
-
                         </div>
                         <div role="tabpanel" class="tab-pane" id="informationTab">
 
