--- a/ERPAnimalia/Views/Cliente/Cliente.cshtml
+++ b/ERPAnimalia/Views/Cliente/Cliente.cshtml
@@ -3,8 +3,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>How to use jQuery Grid with ASP.NET MVC</title>
-   
+    <title>Agregar Clientes</title>
+    @Styles.Render("~/Content/Site.css")
     <script src="~/Scripts/gijgo.min.js"></script>
     <link href="~/Content/css/gijgo.css" rel="stylesheet" />
     <script src="~/Scripts/gijgo.js"></script>
@@ -12,9 +12,8 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
     <link href="~/Content/grid-0.4.3.min.css" rel="stylesheet" type="text/css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js"></script>
-    <script src="http://stevenlevithan.com/assets/misc/date.format.js"></script>
-    <script src="~/Scripts/moment.js"></script>
+    
+  
     <script src="~/Scripts/client.js"></script>
 
         <link href="~/Content/bootstrap-datepicker.css" rel="stylesheet" />
@@ -23,9 +22,7 @@
         <script src="~/Scripts/bootstrap-datepicker.min.js"></script>
         <script src="~/Scripts/bootstrap.min.js" type="text/javascript"></script>
         <script src="~/Scripts/grid-0.4.3.min.js" type="text/javascript"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+      
 
         <script type="text/javascript">
             ids = new Array();
@@ -33,7 +30,6 @@
             var gridProduct;
            
             $(document).ready(function () {
-                debugger;
                 validationimput();
 
                 $('#fechaCompra')
@@ -64,6 +60,7 @@
                         "Jul", "Ago", "Sep", "Oct", "Nov", "Dic"]
                 });
 
+                $.datepicker.setDefaults($.datepicker.regional["es"]);
                 gridProduct = $("#gridProduct").grid({
                     dataKey: "IdProducto",
                     uiLibrary: "bootstrap",
@@ -71,7 +68,7 @@
                         { field: "IdProducto", hidden: true },
                         { field: "Codigo", title: "Código", sortable: true, width: 80 },
                         { field: "Marca", title: "Marca", sortable: true, width: 200 },
-                        { field: "Descripcion1", title: "Descripcion 1", sortable: true, width: 250},
+                        { field: "Descripcion1", title: "Descripcion 1", sortable: true, width: 250 },
                         { field: "Descripcion2", title: "Descripcion 2", sortable: true, width: 250 }
                     ],
                     selectionMethod: 'checkbox',
@@ -83,13 +80,13 @@
                     dataKey: "Id",
                     uiLibrary: "bootstrap",
                     columns: [
-                        { field: "Codigo", title: "Código", sortable: true , width:80},
-                        { field: "Nombre", sortable: true,width: 200  },
-                        { field: "Apellido", sortable: true, width: 200 },
+                        { field: "Codigo", title: "Código", sortable: true, width: 80 },
+                        { field: "Nombre", sortable: true, width: 100 },
+                        { field: "Apellido", sortable: true, width: 100 },
                         { field: "Direccion", title: "Dirección", sortable: true, width: 200 },
-                        { field: "Telefono", sortable: true, width: 200 },
-                         { field: "Mail", sortable: true, width: 200 },
-                        { field: "Mascota", sortable: true, width: 200 },
+                        { field: "Telefono", sortable: true, width: 100 },
+                         { field: "Mail", sortable: true, width: 100 },
+                        { field: "Mascota", sortable: true, width: 100 },
                         { field: "FechaCompra", title: "Compra", type: 'date', format: 'dd/mm/yyyy', sortable: true, width: 150 },
                         { field: "FechaProximaCompra", title: "Proxima Compra", type: 'date', format: 'dd/mm/yyyy', sortable: true, width: 150 },
                         { title: "", field: "Edit", width: 34, type: "icon", icon: "glyphicon-pencil", tooltip: "Edit", events: { "click": Edit } },
@@ -97,7 +94,7 @@
                     ],
                     pager: { enable: true, limit: 5, sizes: [2, 5, 10, 20] }
                 });
-            
+
                 $("#btnAddCliente").on("click", Add);
                 $("#btnSave").on("click", Save);
                 $("#btnSearch").on("click", Search);
@@ -158,16 +155,12 @@
                 });
 
                 $(ids).each(function (index, element) {
-
                     gridProduct.setSelected(element);
 
                 });
-
-
                 $("#clienteModal").modal("show");
             }
           
-
             function Search() {
 
                 grid.reload({ searchString: $("#search").val() });
@@ -196,7 +189,6 @@
    
 
             function Save() {
-                debugger;
                 SaveValidation();
 
                 var selections = gridProduct.getSelections();
@@ -244,11 +236,11 @@
 </head>
 <body>
 
-    <div class="container fill">
-        <h2>Clientes</h2>
-        <br />
-        <div class="row">
-            <div class="col-md-3">
+    <div class="panel panel-primary">
+        <div class="panel-heading">Cliente</div>
+        <br class="panel-body">
+        <div class="form-group row">
+            <div class="col-md-3 col-md-offset-1">
                 <div class="input-group">
                     <input type="text" id="search" class="form-control" placeholder="Search for...">
                     <span class="input-group-btn">
@@ -256,14 +248,15 @@
                     </span>
                 </div>
             </div>
-            <div class="col-md-9">
-                <button type="button" id="btnAddCliente" class="btn btn-default pull-right">Agregar Cliente</button>
+            <div class="col-md-2">
+                <button type="button" id="btnAddCliente" class="btn btn-primary pull-right">Agregar Cliente</button>
             </div>
         </div>
         <br />
-        
+
         <table id="grid" data-source="@Url.Action("GetCliente")"></table>
     </div>
+ 
     
         <!-- Modal -->
         <div class="modal fade" id="clienteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -348,7 +341,7 @@
                                 <div role="tabpanel" class="tab-pane" id="productoTab">
                                     <div class="row">
                                         <div class="col-md-4">
-                                            <div class="input-group">
+                                            <div class="input-group col-md-offset-4">
                                                 <input type="text" id="search" class="form-control" placeholder="Search for...">
                                                 <span class="input-group-btn">
                                                     <button type="button" id="btnSearchGridProduct" class="btn btn-default">Go!</button>
