--- a/ERPAnimalia/Views/Shared/_Layout.cshtml
+++ b/ERPAnimalia/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/themes/base/css")
-    @Styles.Render("~/Content/Site.css")
+   
     @Styles.Render("~/Content/css/gijgo.min.css")
     @Styles.Render("~/Content/css/gijgo.css")
     @Styles.Render("~/Content/bootstrap.min.css")
@@ -19,23 +19,18 @@
     <link href="~/Content/css/gijgo.css" rel="stylesheet" />
     <script src="~/Scripts/gijgo.js"></script>
     <link href="~/Content/css/gijgo.min.css" rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+
+    <script src="~/Scripts/jquery-2.1.4.min.js"></script>
     <script src="~/Scripts/grid/grid.min.js"></script>
     <script src="~/Scripts/grid/grid.js"></script>
-    <script src="http://code.gijgo.com/1.3.0/js/gijgo.js" type="text/javascript">
+    <script src="http://code.gijgo.com/1.3.0/js/gijgo.js" type="text/javascript"></script>
     <link href="~/" rel="stylesheet" type="text/css">
-    <script src="~/Scripts/jquery-3.1.1.intellisense.js"></script>
+    @*<script src="~/Scripts/jquery-3.1.1.intellisense.js"></script>*@
     <script src="~/Scripts/jquery-2.1.4.min.js"></script>
-    <script src="~/Scripts/moment.js"></script>
+    @*<script src="~/Scripts/moment.js"></script>*@
     <script src="~/Scripts/client.js"></script>
-
-    
-
-
     <script src="~/Scripts/1.12.1/jquery-ui.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
-   
-    
     <script src="~/Scripts/bootstrap3.3.7.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery-ui.js"></script>
